--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
               <div class="s-box"><img src="./assets/css-3.svg" alt="css logo" width="100"></div>
             </div>
             <div class="col-sm-6 col-md-4 col-xl">
+              <div class="s-box"><img src="./assets/icons8-bootstrap.svg" alt="bootstrap"  height="130"></div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-xl">
               <div class="s-box"><img src="./assets/logo-javascript.svg" alt="javascript logo" width="100"></div>
             </div>
       </div>
@@ -205,7 +208,7 @@
                 <a href="mailto:umer212ahmed@gmail.com" class="my-links"><img src="./assets/icons8-gmail.svg" alt="gmail-logo" class="icons">  umer212ahmed@gmail.com</a>
               </li>
               <li>
-                <a href="tel:+923330370322" class="my-links"><img src="./assets/icons8-phone.svg" alt="icons8-phone" class="icons">  +923330370322</a>
+                <a href="tel:+923330370232" class="my-links"><img src="./assets/icons8-phone.svg" alt="icons8-phone" class="icons">  +923330370232</a>
               </li>
               <li>
                 <a href="https://www.linkedin.com/in/umer-ahmed-8b314b25b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="my-links"><img src="./assets/icons8-linkedin.svg" alt="icons8-linkedin" class="icons">  Umer Shaikh</a>
